# msquic-py

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  VERSION  deps.json  main.py  pyproject.toml
.github/workflows/: test.yml  wheel.yml
docs/: draft-ietf-moq-c4m-00.txt  draft-ietf-moq-loc-01.txt  draft-ietf-moq-privacy-pass-auth-01.txt  draft-ietf-moq-transport-15.txt  draft-jennings-moq-log-03.txt  draft-jennings-moq-metrics-02.txt  rfc9221.txt
examples/: moqt_client.py  moqt_server.py  moqt_video_publisher.py  moqt_video_relay.py  moqt_video_subscriber.py
src/: bind_msquic.cpp  msquic_ext.cpp
src/moqt/: __init__.py  data_stream.py  loc.py  message.py  session.py  varint.py
src/msquic/: __init__.py  __init__.pyi
tests/: conftest.py  test_client.py  test_data_stream.py  test_datagram.py  test_loc.py  test_moqt.py  test_moqt_client.py  test_moqt_server.py  test_msquic_client.py  test_msquic_server.py  test_registration.py  test_zero_rtt.py
